Create first models (product, variant, shop, category)

--- a/api/shop/models/shop.settings.json
+++ b/api/shop/models/shop.settings.json
@@ -11,6 +11,13 @@
   "attributes": {
     "name": {
       "type": "string"
+    },
+    "categories": {
+      "collection": "category"
+    },
+    "category": {
+      "via": "shops",
+      "model": "category"
     }
   }
 }
