Update knex and pg versions to fix pool connection issue

--- a/api/category/models/category.settings.json
+++ b/api/category/models/category.settings.json
@@ -26,13 +26,17 @@
       "plugin": "upload",
       "required": false
     },
+    "products": {
+      "collection": "product",
+      "via": "categories"
+    },
     "shops": {
       "collection": "shop",
-      "via": "category"
-    },
-    "products": {
       "via": "categories",
-      "collection": "product"
+      "dominant": true
+    },
+    "id_name": {
+      "type": "string"
     }
   }
 }
