Fix database connection (again) and update Product model

--- a/api/category/models/category.settings.json
+++ b/api/category/models/category.settings.json
@@ -36,7 +36,8 @@
       "dominant": true
     },
     "id_name": {
-      "type": "string"
+      "type": "string",
+      "unique": true
     }
   }
 }
