--- a/api/variant/models/variant.settings.json
+++ b/api/variant/models/variant.settings.json
@@ -34,8 +34,8 @@
       "type": "decimal"
     },
     "product": {
-      "model": "product",
-      "via": "variants"
+      "via": "variants",
+      "model": "product"
     }
   }
 }
