Hide confidential provider from product

--- a/api/product/models/product.settings.json
+++ b/api/product/models/product.settings.json
@@ -38,6 +38,10 @@
     "id_name": {
       "type": "string",
       "unique": true
+    },
+    "source_product": {
+      "via": "product",
+      "model": "source-product"
     }
   }
 }
