Upgrade to Strapi v3.1.7

--- a/api/source-product/models/source-product.settings.json
+++ b/api/source-product/models/source-product.settings.json
@@ -18,6 +18,15 @@
     },
     "productName": {
       "type": "string"
+    },
+    "lastKnownPrice": {
+      "type": "decimal"
+    },
+    "LastKnownDeliveryPrice": {
+      "type": "decimal"
+    },
+    "lastUpdate": {
+      "type": "date"
     }
   }
 }
