--- a/package.json
+++ b/package.json
@@ -14,17 +14,17 @@
     "knex": "^0.21.1",
     "pg": "^8.0.3",
     "sqlite3": "^4.2.0",
-    "strapi": "^3.2.3",
-    "strapi-admin": "3.1.7",
-    "strapi-connector-bookshelf": "3.1.7",
-    "strapi-plugin-content-manager": "3.1.7",
-    "strapi-plugin-content-type-builder": "3.1.7",
-    "strapi-plugin-email": "3.1.7",
-    "strapi-plugin-graphql": "3.1.7",
-    "strapi-plugin-upload": "^3.2.3",
-    "strapi-plugin-users-permissions": "3.1.7",
-    "strapi-provider-upload-aws-s3": "^3.1.7",
-    "strapi-utils": "3.1.7"
+    "strapi": "3.2.3",
+    "strapi-admin": "3.2.3",
+    "strapi-connector-bookshelf": "3.2.3",
+    "strapi-plugin-content-manager": "3.2.3",
+    "strapi-plugin-content-type-builder": "3.2.3",
+    "strapi-plugin-email": "3.2.3",
+    "strapi-plugin-graphql": "3.2.3",
+    "strapi-plugin-upload": "3.2.3",
+    "strapi-plugin-users-permissions": "3.2.3",
+    "strapi-provider-upload-aws-s3": "3.2.3",
+    "strapi-utils": "3.2.3"
   },
   "author": {
     "name": "Kitepat"
