--- a/api/order/models/order.settings.json
+++ b/api/order/models/order.settings.json
@@ -2,11 +2,13 @@
   "kind": "collectionType",
   "collectionName": "orders",
   "info": {
-    "name": "Order"
+    "name": "Order",
+    "description": ""
   },
   "options": {
     "increments": true,
-    "timestamps": true
+    "timestamps": true,
+    "draftAndPublish": false
   },
   "attributes": {
     "orderId": {
@@ -31,7 +33,7 @@
         "cancelled"
       ]
     },
-    "products": {
+    "variants": {
       "type": "json"
     },
     "totalAmount": {
@@ -45,10 +47,10 @@
         "USD"
       ]
     },
-    "customerPostalAddress": {
+    "postalAddress": {
       "type": "text"
     },
-    "customerEmailAddress": {
+    "emailAddress": {
       "type": "email"
     },
     "completed": {
@@ -69,7 +71,10 @@
     "password": {
       "type": "string"
     },
-    "customerFullName": {
+    "firstName": {
+      "type": "string"
+    },
+    "lastName": {
       "type": "string"
     }
   }
